kubernetes/tailscaled.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: tailscale
  name: tailscale
spec:
  ports:
    - name: '1080'
      port: 1080
      protocol: TCP
      targetPort: 1080
  selector:
    app: tailscale
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: tailscale
  name: tailscale
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tailscale
  template:
    metadata:
      labels:
        app: tailscale
    spec:
      serviceAccountName: tailscale
      volumes:
        - name: tailscale
          persistentVolumeClaim:
            claimName: qbt-ts
      containers:
        - name: tailscale
          imagePullPolicy: Always
          image: ghcr.io/tailscale/tailscale:latest
          volumeMounts:
            - name: tailscale
              mountPath: /var/lib/tailscale
          securityContext:
            capabilities:
              add:
                - NET_ADMIN
          resources:
            limits:
              cpu: 1.0
          lifecycle:
            postStart:
              exec:
                command:
                  - /bin/sh
                  - -c
                  - sleep 1 && tailscale set --exit-node=gb-lon-wg-003.mullvad.ts.net
