kubernetes/illegal-network.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: illegal-network
spec:
  podSelector:
    matchLabels:
      role: illegal
  policyTypes: [Egress]
  egress: [{ to: [{ namespaceSelector: {} }] }]
